--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -38,8 +38,14 @@
 		<param-value>org.gadlets.GadletsFaceletFactory</param-value>
 	</context-param>
 
-	
-	
+	<context-param>
+		<param-name>javax.faces.FACELETS_LIBRARIES</param-name>
+		<param-value>
+			/WEB-INF/gadlets.taglib.xml
+		</param-value>
+	</context-param>
+
+
 
 
 	<!-- Weld Jetty/Tomcat specific configuration parameters -->
