--- a/gadlets-core/pom.xml
+++ b/gadlets-core/pom.xml
@@ -13,5 +13,56 @@
 		<version>1.0.0-SNAPSHOT</version>
 		<relativePath>../pom.xml</relativePath>	
 	</parent>
+
+    <dependencies>
+        <!-- Common to JEE and Servlet containers -->
+		<dependency>
+			<groupId>javax.enterprise</groupId>
+			<artifactId>cdi-api</artifactId>
+			<scope>provided</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>javax.annotation</groupId>
+			<artifactId>jsr250-api</artifactId>
+			<scope>provided</scope>
+		</dependency>
+
+        <!-- JSF 2.0 API -->
+		<dependency>
+			<groupId>javax.faces</groupId>
+			<artifactId>jsf-api</artifactId>
+		</dependency>
+
+        <!-- JSF 2.0 Implementation -->
+        <dependency>
+			<groupId>javax.faces</groupId>
+			<artifactId>jsf-impl</artifactId>
+			<scope>provided</scope>
+		</dependency>
+
+         <dependency>
+			<groupId>javax.el</groupId>
+			<artifactId>el-api</artifactId>
+			<version>2.1.2-b04</version>
+			<scope>provided</scope>
+		</dependency>
+
+        <!-- Bean Validation API (JSR 303) -->
+		<dependency>
+			<groupId>javax.validation</groupId>
+			<artifactId>validation-api</artifactId>
+		</dependency>
+
+		<!-- Bean Validation Implementation -->
+		<!-- Provides portable constraints such as @NotEmpty, @Email and @Url -->
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-validator</artifactId>
+			<version>4.0.0.GA</version>
+		</dependency>
+    </dependencies>
+
+
 	
 </project>
