--- a/gadlets-test/pom.xml
+++ b/gadlets-test/pom.xml
@@ -14,14 +14,7 @@
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 
-	<properties>
-		<!-- Explicitly declaring the source encoding eliminates the following 
-			message: [WARNING] Using platform encoding (UTF-8 actually) to copy filtered 
-			resources, i.e. build is platform dependent! -->
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<!-- The version of Weld extensions in use -->
-		<weld.extensions.version>1.0.0-CR2</weld.extensions.version>
-	</properties>
+
 
 	<repositories>
 		<!-- Several key Java EE APIs and RIs are missing from the Maven Central 
@@ -34,18 +27,7 @@
 		</repository>
 	</repositories>
 
-	<dependencyManagement>
-		<dependencies>
-			<!-- Import scope will provide versions for dependencies below. -->
-			<dependency>
-				<groupId>org.jboss.weld</groupId>
-				<artifactId>weld-extensions-bom</artifactId>
-				<version>${weld.extensions.version}</version>
-				<type>pom</type>
-				<scope>import</scope>
-			</dependency>
-		</dependencies>
-	</dependencyManagement>
+
 
 	<dependencies>
 
@@ -93,7 +75,7 @@
 		<dependency>
 			<groupId>javax.faces</groupId>
 			<artifactId>jsf-impl</artifactId>
-			<scope>runtime</scope>
+			<scope>provided</scope>
 		</dependency>
 
 		<dependency>
