--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,28 @@
 		<module>gadlets-test</module>
 	</modules>
 
+    <properties>
+		<!-- Explicitly declaring the source encoding eliminates the following
+			message: [WARNING] Using platform encoding (UTF-8 actually) to copy filtered
+			resources, i.e. build is platform dependent! -->
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<!-- The version of Weld extensions in use -->
+		<weld.extensions.version>1.0.0-CR2</weld.extensions.version>
+	</properties>
+
+    <dependencyManagement>
+		<dependencies>
+			<!-- Import scope will provide versions for dependencies below. -->
+			<dependency>
+				<groupId>org.jboss.weld</groupId>
+				<artifactId>weld-extensions-bom</artifactId>
+				<version>${weld.extensions.version}</version>
+				<type>pom</type>
+				<scope>import</scope>
+			</dependency>
+		</dependencies>
+	</dependencyManagement>
+
 	<build>
 		<plugins>
 			<!-- Compiler plugin enforces Java 1.5 compatibility -->
