Moved Handler impl to core.

--- a/gadlets-test/pom.xml
+++ b/gadlets-test/pom.xml
@@ -75,7 +75,7 @@
 		<dependency>
 			<groupId>javax.faces</groupId>
 			<artifactId>jsf-impl</artifactId>
-			<scope>provided</scope>
+			<scope>runtime</scope>
 		</dependency>
 
 		<dependency>
