--- a/gadlets-test/pom.xml
+++ b/gadlets-test/pom.xml
@@ -16,16 +16,13 @@
 
 
 
-	<repositories>
-		<!-- Several key Java EE APIs and RIs are missing from the Maven Central 
-			Repository -->
-		<!-- The goal is to eventually eliminate the reliance on the JBoss repository -->
+	<!--repositories>
 		<repository>
 			<id>repository.jboss.org</id>
 			<name>JBoss Repository</name>
 			<url>http://repository.jboss.org/maven2</url>
 		</repository>
-	</repositories>
+	</repositories-->
 
 
 
@@ -64,9 +61,8 @@
 		<dependency>
 			<groupId>org.testng</groupId>
 			<artifactId>testng</artifactId>
-			<version>5.10</version>
+			<version>5.12.1</version>
 			<scope>test</scope>
-			<classifier>jdk15</classifier>
 		</dependency>
 
 		<!-- Jetty/Tomcat-specific scopes and artifacts -->
@@ -75,7 +71,8 @@
 		<dependency>
 			<groupId>javax.faces</groupId>
 			<artifactId>jsf-impl</artifactId>
-			<scope>runtime</scope>
+            <version>2.0.0-RC</version>
+			<scope>provided</scope>
 		</dependency>
 
 		<dependency>
@@ -84,15 +81,15 @@
 			<scope>runtime</scope>
 		</dependency>
 
-		<dependency>
+		<!--dependency>
 			<groupId>org.glassfish.web</groupId>
 			<artifactId>el-impl</artifactId>
 			<scope>runtime</scope>
-			<exclusions>
+			<exclusions-->
 				<!-- <exclusion> <groupId>javax.el</groupId> <artifactId>el-api</artifactId> 
 					</exclusion> -->
-			</exclusions>
-		</dependency>
+			<!--/exclusions>
+		</dependency-->
 
 		<dependency>
 			<groupId>javax.el</groupId>
