--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,23 @@
 		<module>gadlets-test</module>
 	</modules>
 
+    <repositories>
+        <repository>
+          <id>jboss-public-repository-group</id>
+          <name>JBoss Public Maven Repository Group</name>
+          <url>https://repository.jboss.org/nexus/content/groups/public-jboss/</url>
+          <layout>default</layout>
+          <releases>
+            <enabled>true</enabled>
+            <updatePolicy>never</updatePolicy>
+          </releases>
+          <snapshots>
+            <enabled>true</enabled>
+            <updatePolicy>never</updatePolicy>
+          </snapshots>
+        </repository>
+      </repositories>
+
     <properties>
 		<!-- Explicitly declaring the source encoding eliminates the following
 			message: [WARNING] Using platform encoding (UTF-8 actually) to copy filtered
@@ -25,13 +42,20 @@
     <dependencyManagement>
 		<dependencies>
 			<!-- Import scope will provide versions for dependencies below. -->
-			<dependency>
+			<!--dependency>
 				<groupId>org.jboss.weld</groupId>
 				<artifactId>weld-extensions-bom</artifactId>
 				<version>${weld.extensions.version}</version>
 				<type>pom</type>
 				<scope>import</scope>
-			</dependency>
+			</dependency-->
+            <dependency>
+                        <groupId>org.jboss.weld</groupId>
+                        <artifactId>weld-core-bom</artifactId>
+                        <version>1.1.0.Final</version>
+                        <type>pom</type>
+                        <scope>import</scope>
+                    </dependency>
 		</dependencies>
 	</dependencyManagement>
 
