--- a/gadlets-seam2/pom.xml
+++ b/gadlets-seam2/pom.xml
@@ -7,9 +7,8 @@
 		<version>1.0.0-SNAPSHOT</version>
 	</parent>
 	<groupId>org.gadlets</groupId>
-	<artifactId>gadlets-jsf12</artifactId>
+	<artifactId>gadlets-seam2</artifactId>
 	<version>1.0.0-SNAPSHOT</version>
-
 	<dependencies>
 		<dependency>
 			<groupId>org.gadlets</groupId>
@@ -17,21 +16,9 @@
 			<version>1.0.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
-			<groupId>com.sun.facelets</groupId>
-			<artifactId>jsf-facelets</artifactId>
-			<version>1.1.15</version>
-			<scope>provided</scope>
-		</dependency>
-		<dependency>
-			<groupId>javax.faces</groupId>
-			<artifactId>jsf-api</artifactId>
-			<version>1.2</version>
-			<scope>provided</scope>
-		</dependency>
-		<dependency>
-			<groupId>javax.el</groupId>
-			<artifactId>el-api</artifactId>
-			<version>2.2</version>
+			<groupId>org.jboss.seam</groupId>
+			<artifactId>jboss-seam</artifactId>
+			<version>2.2.2.Final</version>
 			<scope>provided</scope>
 		</dependency>
 	</dependencies>
