Added gadlets-facelets-common and moved related code from core.

--- a/gadlets-jsf12/pom.xml
+++ b/gadlets-jsf12/pom.xml
@@ -16,6 +16,13 @@
 			<artifactId>gadlets-core</artifactId>
 			<version>1.0.0-SNAPSHOT</version>
 		</dependency>
+
+		<dependency>
+			<groupId>org.gadlets</groupId>
+			<artifactId>gadlets-facelets-common</artifactId>
+			<version>1.0.0-SNAPSHOT</version>
+		</dependency>
+
 		<dependency>
 			<groupId>com.sun.facelets</groupId>
 			<artifactId>jsf-facelets</artifactId>
