--- a/gadlets-test/pom.xml
+++ b/gadlets-test/pom.xml
@@ -36,6 +36,11 @@
 			<artifactId>gadlets-jsf20</artifactId>
 			<version>1.0.0-SNAPSHOT</version>
 		</dependency>
+		<dependency>
+			<groupId>org.gadlets</groupId>
+			<artifactId>gadlets-cdi</artifactId>
+			<version>1.0.0-SNAPSHOT</version>
+		</dependency>
 
 		<!-- Common to JEE and Servlet containers -->
 		<dependency>
