--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
 		<module>gadlets-jsf20</module>
 		<module>gadlets-seam2</module>
 		<module>gadlets-test</module>
+		<module>gadlets-cdi</module>
 	</modules>
 
 	<repositories>
