--- a/gadlets-test/pom.xml
+++ b/gadlets-test/pom.xml
@@ -120,6 +120,12 @@
 			<artifactId>hibernate-validator</artifactId>
 			<version>4.0.0.GA</version>
 		</dependency>
+
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-simple</artifactId>
+			<scope>provided</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
